Some design optimisations

--- a/footer.html
+++ b/footer.html
@@ -2,9 +2,13 @@
 
 <address>
 
-Idea and scripts (C)reated 2008 by <a href="http://epe.at/blog/">eric
-poscher</a>, licensed under GPL and CC-BY-SA-AT-3.0, and first used at
-<a href="http://192.168.epe.at/">192.168.epe.at</a>
+Idea and initial shell scripts &copy;reated 2008 by <a
+href="http://epe.at/blog/">Eric Poscher</a>. First used by him at <a
+href="http://192.168.epe.at/">192.168.epe.at</a>.<br />
+
+Rewrite in <a href="http://www.perl.org/">Perl</a> &copy; 2009 by <a
+href="http://noone.org/abe/">Axel Beckert</a>. Code licensed under
+GPLv2+, design under CC-BY-SA-DE-3.0+.
 
 </address>
 
