--- a/header.html
+++ b/header.html
@@ -10,20 +10,22 @@
 <meta http-equiv="refresh" content="3600;URL=http://192.168.noone.org/">
 
 <style type="text/css">
-  body { font-family: "Lucida Sans,Helvetica,Verdana,sans-serif";
-         color: rgb(192,168,0); background-color: #000000; }
+  body { font-family: 'Lucida Sans',Helvetica,Verdana,sans-serif;
+         color: rgb(192,168,0); background-color: #000000;
+         padding-top: 100px; padding-left: 100px; padding-right: 100px; }
   a { color: rgb(172,16,0); }
   a:link,a:visited { text-decoration: none; }
   a:hover,a:focus { text-decoration: underline; }
-  span.item { font-size: x-small; padding: 3px 6px 3px 6px; }
-  h1 { text-align: right; color: rgb(192,168,0);
-       margin-left: 100px; margin-top: 100px; margin-right:100px; }
+  span.item { font-size: x-small;
+              padding: 3px 6px 3px 6px; margin: 1px; }
+  h1, h1 a { color: rgb(192,168,0); }
+  h1 { text-align: right; }
   address { font-size: x-small; font-style: normal; text-align: right;
-            margin-right: 100px; margin-top: 100px; }
-  div.body { margin-top: 100px; margin-left: 100px; margin-right: 100px; }
+            margin-top: 10ex; margin-left: 0px; margin-right: 0px; }
 </style>
 
 </head>
 <body>
 <h1><a href="http://192.168.noone.org/">192.168.noone.org</a></h1>
-<div class="body">
+
+<div class="blocks">
