--- a/footer.html
+++ b/footer.html
@@ -8,7 +8,7 @@ href="http://192.168.epe.at/">192.168.epe.at</a>.<br />
 
 Rewrite in <a href="http://www.perl.org/">Perl</a> &copy; 2009 by <a
 href="http://noone.org/abe/">Axel Beckert</a>. <a
-href="http://noone.org/git?p=192.168.git">Code</a> licensed under GPLv2+,
+href="http://git.noone.org/?p=192.168.git">Code</a> licensed under GPLv2+,
 design under CC-BY-SA-DE-3.0+.
 
 </address>
