Links to licenses and blog entries.

--- a/footer.html
+++ b/footer.html
@@ -3,13 +3,21 @@
 <address>
 
 Idea and initial shell scripts &copy;reated 2008 by <a
-href="http://epe.at/blog/">Eric Poscher</a>. First used by him at <a
+href="http://epe.at/blog/">Eric Poscher</a>. First used by him on <a
 href="http://192.168.epe.at/">192.168.epe.at</a>.<br />
 
-Rewrite in <a href="http://www.perl.org/">Perl</a> &copy; 2009 by <a
-href="http://noone.org/abe/">Axel Beckert</a>. <a
-href="http://git.noone.org/?p=192.168.git">Code</a> licensed under GPLv2+,
-design under CC-BY-SA-DE-3.0+.
+<a
+href="http://noone.org/blog/English/Computer/Web/192.168.noone.org.futile"
+>Rewritten</a> in <a href="http://www.perl.org/">Perl</a> &copy; 2009
+by <a href="http://noone.org/abe/">Axel Beckert</a>. <a
+href="http://git.noone.org/?p=192.168.git">Code</a> licensed under <a
+href="http://www.gnu.org/licenses/old-licenses/gpl-2.0.html">GPLv2</a><a
+href="http://www.gnu.org/licenses/gpl.html">+</a>, design under <a
+rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/de/"
+>CC-BY-SA-DE-3.0</a>+.<br />
+
+<a href="http://noone.org/blog?-tags=192.168.noone.org">All blog
+entries about Axel's IP blog</a>.
 
 </address>
 
