--- a/header.html
+++ b/header.html
@@ -17,6 +17,7 @@
   a:link,a:visited { text-decoration: none; }
   a:hover,a:focus { text-decoration: underline; }
   span.item { font-size: x-small;
+              -moz-border-radius: 12px; border-radius: 12px;
               padding: 3px 6px 3px 6px; margin: 1px; }
   h1, h1 a { color: rgb(192,168,0); }
   h1 { text-align: right; }
