--- a/header.html
+++ b/header.html
@@ -17,7 +17,8 @@
   a:link,a:visited { text-decoration: none; }
   a:hover,a:focus { text-decoration: underline; }
   span.item { font-size: x-small;
-              padding: 3px 6px 3px 6px; margin: 1px; }
+              -moz-border-radius: 6px; border-radius: 6px;
+              padding: 3px 6px 3px 6px; margin: 0px 3px 0px 3px; }
   h1, h1 a { color: rgb(192,168,0); }
   h1 { text-align: right; }
   address { font-size: x-small; font-style: normal; text-align: right;
