--- a/footer.html
+++ b/footer.html
@@ -11,9 +11,10 @@ href="http://noone.org/blog/English/Computer/Web/192.168.noone.org.futile"
 >Rewritten</a> in <a href="http://www.perl.org/">Perl</a> &copy; 2009
 by <a href="http://noone.org/abe/">Axel Beckert</a>. <a
 href="http://git.noone.org/?p=192.168.git">Code</a> licensed under <a
-href="http://www.gnu.org/licenses/old-licenses/gpl-2.0.html">GPLv2</a><a
-href="http://www.gnu.org/licenses/gpl.html">+</a>, design under <a
-rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/de/"
+href="http://www.gnu.org/licenses/old-licenses/gpl-2.0.html"
+rel="license">GPLv2</a><a href="http://www.gnu.org/licenses/gpl.html"
+rel="license">+</a>, design under <a rel="license"
+href="http://creativecommons.org/licenses/by-sa/3.0/de/"
 >CC-BY-SA-DE-3.0</a>+.<br />
 
 <a href="http://noone.org/blog?-tags=192.168.noone.org">All blog
