Make text slightly shorter but not less informative

--- a/footer.html
+++ b/footer.html
@@ -2,9 +2,9 @@
 
 <address>
 
-Idea and initial shell scripts &copy;reated 2008 by <a
-href="http://epe.at/blog/">Eric Poscher</a>. First used by him on <a
-href="http://192.168.epe.at/">192.168.epe.at</a>.<br />
+Idea and initial shell scripts of the IP blog <a
+href="http://192.168.epe.at/">192.168.epe.at</a> &copy;reated 2008 by
+<a href="http://epe.at/blog/">Eric Poscher</a>.<br />
 
 <a
 href="http://noone.org/blog/English/Computer/Web/192.168.noone.org.futile"
