Gitorious link: link to project page, not repo page

--- a/footer.html
+++ b/footer.html
@@ -12,7 +12,7 @@ href="http://noone.org/blog/English/Computer/Web/192.168.noone.org.futile"
 >Rewrite</a> in <a href="http://www.perl.org/">Perl</a> &copy; 2009 by
 <a href="http://noone.org/abe/">Axel Beckert</a>. <a
 href="http://git.noone.org/?p=192.168.git">Code</a> (also <a
-href="http://gitorious.org/192-168/192-168">at Gitorious</a> and <a
+href="http://gitorious.org/192-168/">at Gitorious</a> and <a
 href="http://github.com/xtaran/192.168">at GitHub</a>) licensed under
 <a href="http://www.gnu.org/licenses/old-licenses/gpl-2.0.html"
 rel="license">GPLv2</a><a href="http://www.gnu.org/licenses/gpl.html"
